# fury

./: .gitignore  Cargo.toml  LICENSE  flake.nix  rustfmt.toml
.github/workflows/: ci.yml
.helix/: languages.toml
editors/vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: main.ts
nix/: fury.nix  vscode.nix
src/: diagnostic.rs  lib.rs  main.rs  source.rs  structures.rs
src/hir/: mod.rs
src/lsp/: document_synchronization.rs  interop.rs  mod.rs  thread_pool.rs
src/syntax/: grammar.rs  kind.rs  lexer.rs  mod.rs  parser.rs  tree.rs
src/syntax/snapshots/: fury__syntax__grammar__bool_literal.snap  fury__syntax__grammar__empty.snap  fury__syntax__grammar__expr_group.snap  fury__syntax__grammar__fn_params.snap  fury__syntax__grammar__fn_return_type.snap  fury__syntax__grammar__ident_expr.snap  fury__syntax__grammar__int_literal.snap  fury__syntax__grammar__missing_item.snap  fury__syntax__grammar__multiple_items.snap  fury__syntax__grammar__params_missing_recovery.snap  fury__syntax__grammar__params_no_trailing.snap  fury__syntax__grammar__params_with_trailing.snap  fury__syntax__grammar__type_simple.snap
src/terminal/: diagnostic.rs  mod.rs
std/: fury.toml
std/src/: boolean.fury  comparison.fury  lib.fury  optional.fury  prelude.fury
