[package]
name = "fury"
version = "0.0.0"
authors = ["dawnofmidnight <dawnofmidnight@duck.com>"]
edition = "2024"
repository = "https://github.com/dawnofmidnight/fury"
license = "MIT"
publish = false

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
match_bool = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
single_match_else = "allow"

[dependencies]
argh = "0.1.13"
crossbeam-channel = "0.5.15"
foldhash = "0.1.5"
line-index = "0.1.2"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
num_cpus = "1.16.0"
paracord = "0.1.0-rc.7"
salsa = "0.21.1"
serde = "1.0.219"
serde_json = "1.0.140"
syntree = "0.18.0"
termcolor = "1.4.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }
unicode-xid = "0.2.6"

[dev-dependencies]
insta = "1.43.1"
paste = "1.0.15"
